tests/reference/llvm-global_scope9-bdf4288.stderr
syntax error: Statement or Declaration expected inside program, found Variable name
 --> tests/global_scope9.f90:3:1
  |
3 | x
  | ^ 
